# adrift

./: .gitignore  README.md
adrift-game/: adrift.cabal  game.hs
haskell-practice/day-practices/: day-1-practice.hs  day-10-practice.hs  day-11-practice.hs  day-12-practice.hs  day-2-practice.hs  day-3-practice.hs  day-4-practice.hs  day-5-practice.hs  day-6-practice.hs  day-7-practice.hs  day-8-practice.hs  day-9-practice.hs
haskell-practice/formal-semantics/: intro-to-formal-semantics.hs  small-step-evaluator.hs
