cabal-version:      2.4
name:               adrift
version:            0.1.0.0
synopsis:           A simple text-based adventure game.
description:        Adrift is a simple text-based adventure game written in Haskell where the player navigates a character through a grid to reach a goal, avoiding obstacles along the way.
license:            MIT
license-file:       LICENSE
author:             Alexandre Thurow Bender
build-type:         Simple
extra-source-files: README.md

executable adrift
    main-is:          game.hs
    build-depends:    base,
                      random,
                      ansi-terminal
    hs-source-dirs:   .
    default-language: Haskell2010 